// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewContent component component render tests snapshot: failed, showRubric (errors only) 1`] = `
<div
  className="content-block"
>
  <ReviewErrors />
</div>
`;

exports[`ReviewContent component component render tests snapshot: hide rubric 1`] = `
<div
  className="content-block"
>
  <ReviewErrors />
  <Row
    className="flex-nowrap"
  >
    <Col>
      <ResponseDisplay />
    </Col>
    <Rubric />
  </Row>
</div>
`;

exports[`ReviewContent component component render tests snapshot: show rubric 1`] = `
<div
  className="content-block"
>
  <ReviewErrors />
  <Row
    className="flex-nowrap"
  >
    <Col>
      <ResponseDisplay />
    </Col>
  </Row>
</div>
`;
